# targurs

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  demo.py  pyproject.toml  targurs.py  test_targurs.py
.github/workflows/: python-package.yml
