[project]
name = "targurs"
description = "Targurs"
authors = [{ name = "M. Kocher", email = "michael.kocher@me.com" }]
#dependencies = ["pydantic>=2.8.2"]
readme = "README.md"
requires-python = ">= 3.12"
dynamic = ['version']
urls = { 'Source Code' = 'http://github.com/mpkocher/targurs' }
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest>=8.2.2", "pytest-cov>=4.0.0", "mypy>=1.11.1", "black>=24.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ['targurs' ]

[tool.hatch.version]
path = "_version.py"

[tool.hatch.build]
include = ['CHANGELOG.md']
